Implemented integration with the system clipboard!!